--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,11 +17,10 @@ header {
 /* Logo du site */
 
 .logo {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     background-image: url('/images/logo.png');
     background-size: contain;
-    background-position: center;
     background-repeat: no-repeat;
 }
 
@@ -40,7 +39,6 @@ nav {
 .nav-links a {
     color: white;
     text-decoration: none; 
-    font-weight: bold;
 }
 
 .nav-links a:hover {
@@ -51,7 +49,8 @@ nav {
     justify-content: center;
     display: flex;
     gap: 20px;
-    margin-left: 35%;
+    margin-left: 39%;
+    margin-top: 1%;
 }
 
 
@@ -88,7 +87,7 @@ color:white;
 
 /*icones login,panier,search*/
 .nav-icons {
-    margin-right: 50px;
+    margin-right: 100px;
     display: flex;
     gap: 20px;
 }
@@ -176,7 +175,7 @@ h2 {
     background-size: cover;
     background-position: center 0px;
     width: 100%;
-    height: 600px;
+    height: 700px;
     position: relative;
 }
 
@@ -188,7 +187,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* Ajuste l'opacité (0.4 = 40% de noir) */
+    background: rgba(0, 0, 0, 0.4);
 }
 /*contenue dans la premiere bannieres*/
 .banner-content {
@@ -214,7 +213,7 @@ h2 {
     background-size: cover;
     background-position: center 0px;
     width: 100%;
-    height: 600px;
+    height: 700px;
     position: relative;
 }
 
@@ -235,15 +234,18 @@ h2 {
     margin-bottom: 20px;
 }
 /*L'histoire de jeans lassape dans la baniere2*/
+
 .white-box {
     position: absolute;
     top: 20px;
     left: 20px;
-    padding:0 10 0 10;
+    padding: 10px; /* Espacement intérieur */
     background-color: white;
     color: black;
     border-radius: 5px;
+    border: 2px solid black; /* Bordure interne noire */
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box; /* S'assure que la bordure est incluse dans la taille de l'élément */
     font-weight: bold;
     text-align: left;
 }
@@ -259,7 +261,6 @@ h2 {
     margin-left: 15px;
     margin-right: 15px;
 }
-
 
 /*footer*/
 
