--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -38,11 +38,15 @@
             </div>
         </div>
     </div>
-    <div class="nav-icons">
-    <div class="search"></div>
-    <div class="panier"></div>
-    <div class="profile"></div>
-</nav>
+
+<div class="nav-icons">
+    <a href="/search" class="search">
+    </a>
+    <a href="/cart" class="panier">
+    </a>
+    <a href="/account" class="profile">
+    </a>
+</div>
 
 
     </header>
