--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -44,7 +44,7 @@
     </a>
     <a href="/cart" class="panier">
     </a>
-    <a href="/account" class="profile">
+    <a href="{{ path('app_login') }}" class="profile">
     </a>
 </div>
 
