--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -314,6 +314,26 @@ h2 {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+/*Banniere articles unisex*/
+
+
+.bannerunisex-image1 {
+    background-image: url('/images/banniereunisex.png');
+    background-size: cover;
+    background-position: center -400px;
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+.bannerunisex-image1::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); 
+}
 /*L'histoire de jeans lassape dans la baniere2*/
 
 .white-box {
