--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -77,7 +77,7 @@
 </section>
 
     <div class="button-container">
-        <a href="boutique.html" class="view-all-button">Voir tous les articles</a>
+        <a href="/articles" class="view-all-button">Voir tous les articles</a>
     </div>
 </section>
 
