--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
+        <a class="logo" href="/"></a>
         <nav>
             <div class="nav-links">
                 <div class="dropdown">
