--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 <body>
     <header>
 	
-        <div class="logo"></div>
+        <a class="logo" href="/"></a>
 <nav>
     <div class="nav-links">
         <div class="dropdown">
