--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,11 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+main {
+    flex: 1;
+}
 
 
 /* Header */
@@ -117,8 +125,11 @@ color:white;
 /*body*/
 
 body {
+    display: flex;
+    flex-direction: column;
     font-family: 'Oswald', sans-serif;
 }
+
 /*titres*/
 h2 {
     text-align: center;
@@ -366,10 +377,10 @@ h2 {
 /*footer*/
 
 footer {
-        background-color: #1A1A2E;
-        color: white;
-        text-align: center;
-        padding: 25px;
-        bottom: 0;
-        width: 100%;
-    }
+    background-color: #1A1A2E;
+    color: white;
+    text-align: center;
+    padding: 25px;
+    width: 100%;
+    margin-top: auto; 
+}
