--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Articles - Jeans-Lassape{% endblock %}
 
 {% block body %}
-    <section class="bannerunisex">
-        <div class="bannerunisex-image1"></div>
+    <section class="bannerarticles">
+        <div class="bannerarticles-image1"></div>
     </section>
 
     <section class="articles">
