--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,9 @@
         <a class="logo" href="/"></a>
         <nav>
             <div class="nav-links">
+             <div class="dropdown">
+              <a href="/articles">Tous les articles</a>
+              </div>
                 <div class="dropdown">
                     <a href="{{ path('app_articles_category', {'genre': 'Homme', 'categorie': 'Tous'}) }}">Hommes ▼</a>
                     <div class="dropdown-content">
