--- a/templates/articles/category.html.twig
+++ b/templates/articles/category.html.twig
@@ -3,8 +3,19 @@
 {% block title %}Articles - {{ categorie }} - Jeans-Lassape{% endblock %}
 
 {% block body %}
-    <h2>Articles pour la catégorie "{{ categorie }}"</h2>
 
+    <section class="bannerarticles">
+        {% if genre == 'Homme' %}
+            <div class="bannerarticles-image2"></div>
+    {% elseif genre == 'Femme' %}
+            <div class="bannerarticles-image3"></div>
+    {% else %}
+             <div class="bannerarticles-image1"></div>
+    {% endif %}
+    </section>
+
+
+<h2>Articles pour la catégorie "{{ categorie }}"</h2>
     <section class="featured-products">
         <div class="product-list">
             {% for article in articles %}
