--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
 </section>
 
 <section class="featured-products">
-    <h2>Nos produits</h2>
+    <h2>Nouveautés</h2>
     <div class="product-list">
         {% for article in articles %}
             <div class="product-card">
