can register an account and save in data.db

--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -13,4 +13,7 @@
 
         <button type="submit">Se connecter</button>
     </form>
+    <a href="{{ path('app_register') }}">
+        <button type="button">Créer un compte</button>
+    </a>
 {% endblock %}
