--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -5,11 +5,11 @@
 {% block body %}
     <h1>Connexion</h1>
     <form action="{{ path('app_login') }}" method="post">
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email" required>
+        <label for="username">Email :</label>
+        <input type="text" id="username" name="_username" required>
 
         <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="_password" required>
 
         <button type="submit">Se connecter</button>
     </form>
