--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -4,9 +4,12 @@
 
 {% block body %}
     <h1>Connexion</h1>
+    {% if error %}
+        <div class="alert alert-danger" style="color: red;">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
     <form action="{{ path('app_login') }}" method="post">
         <label for="username">Email :</label>
-        <input type="text" id="username" name="_username" required>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" required>
 
         <label for="password">Mot de passe :</label>
         <input type="password" id="password" name="_password" required>
