--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -1,18 +1,17 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_auth.html.twig' %}
 
 {% block title %}Connexion{% endblock %}
-
+{% block additional_css %}
+    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+{% endblock %}
 {% block body %}
     <h1>Connexion</h1>
-    {% if error %}
-        <div class="alert alert-danger" style="color: red;">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
     <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email :</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" required>
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" required>
 
         <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="_password" required>
+        <input type="password" id="password" name="password" required>
 
         <button type="submit">Se connecter</button>
     </form>
