--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -1,21 +1,30 @@
-{% extends 'base_auth.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Connexion{% endblock %}
-{% block additional_css %}
-    <link rel="stylesheet" href="{{ asset('css/login.css') }}">
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/auth.css') }}">
 {% endblock %}
+
 {% block body %}
-    <h1>Connexion</h1>
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="email">Email :</label>
-        <input type="email" id="email" name="email" required>
+    <div class="auth-container">
+        <h1>Connexion</h1>
+        <form action="{{ path('app_login') }}" method="post">
+            <div class="form-group">
+                <label for="email">Email :</label>
+                <input type="email" id="email" name="email" required>
+            </div>
 
-        <label for="password">Mot de passe :</label>
-        <input type="password" id="password" name="password" required>
+            <div class="form-group">
+                <label for="password">Mot de passe :</label>
+                <input type="password" id="password" name="password" required>
+            </div>
 
-        <button type="submit">Se connecter</button>
-    </form>
-    <a href="{{ path('app_register') }}">
-        <button type="button">Créer un compte</button>
-    </a>
+            <button type="submit">Se connecter</button>
+        </form>
+        <div class="auth-links">
+            <p>Pas encore de compte ? <a href="{{ path('app_register') }}">S'inscrire</a></p>
+        </div>
+    </div>
 {% endblock %}
