--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -8,23 +8,25 @@
 {% endblock %}
 
 {% block body %}
-    <div class="auth-container">
-        <h1>Connexion</h1>
-        <form action="{{ path('app_login') }}" method="post">
-            <div class="form-group">
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
-            </div>
+    <div class="auth-page-wrapper">
+        <div class="auth-container">
+            <h1>Connexion</h1>
+            <form action="{{ path('app_login') }}" method="post">
+                <div class="form-group">
+                    <label for="email">Email :</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
 
-            <div class="form-group">
-                <label for="password">Mot de passe :</label>
-                <input type="password" id="password" name="password" required>
-            </div>
+                <div class="form-group">
+                    <label for="password">Mot de passe :</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
 
-            <button type="submit">Se connecter</button>
-        </form>
-        <div class="auth-links">
-            <p>Pas encore de compte ? <a href="{{ path('app_register') }}">S'inscrire</a></p>
+                <button type="submit">Se connecter</button>
+            </form>
+            <div class="auth-links">
+                <p>Pas encore de compte ? <a href="{{ path('app_register') }}">S'inscrire</a></p>
+            </div>
         </div>
     </div>
 {% endblock %}
