--- a/templates/home/login.html.twig
+++ b/templates/home/login.html.twig
@@ -13,13 +13,13 @@
             <h1>Connexion</h1>
             <form action="{{ path('app_login') }}" method="post">
                 <div class="form-group">
-                    <label for="email">Email :</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="username">Email :</label>
+                    <input type="email" id="username" name="_username" required>
                 </div>
 
                 <div class="form-group">
                     <label for="password">Mot de passe :</label>
-                    <input type="password" id="password" name="password" required>
+                    <input type="password" id="password" name="_password" required>
                 </div>
 
                 <button type="submit">Se connecter</button>
