--- a/templates/admin/edit_user.html.twig
+++ b/templates/admin/edit_user.html.twig
@@ -31,6 +31,7 @@
                     <td>{{ article.prix }}</td>
                     <td>
                         <a href="{{ path('admin_article_edit', {id: article.id}) }}">Edit</a>
+                        <a href="{{ path('admin_article_delete', {id: article.id}) }}" onclick="return confirm('Are you sure you want to delete this article?');">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
