--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -24,6 +24,7 @@
                     <td>{{ user.roles|join(', ') }}</td>
                     <td>
                         <a href="{{ path('admin_user_edit', {id: user.id}) }}">Edit</a>
+                        <a href="{{ path('admin_user_delete', {id: user.id}) }}" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
