--- a/templates/home/profile.html.twig
+++ b/templates/home/profile.html.twig
@@ -24,7 +24,7 @@
 
         <label for="profil_picture">Photo de profil :</label>
         <input type="file" id="profil_picture" name="profil_picture">
-        <img src="{{ asset('images/' ~ user.profilPicture) }}" alt="Profile Picture">
+        <img src="{{ asset('/images/' ~ user.profilPicture) }}" alt="Profile Picture">
 
         <label for="current_password">Mot de passe actuel :</label>
         <input type="password" id="current_password" name="current_password">
@@ -39,26 +39,4 @@
     </form>
 {% endblock %}
 
-{% block stylesheets %}
-{{ parent() }}
-<style>
-    .add-article-button {
-        margin: 20px 0;
-    }
 
-    .button-primary {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: white;
-        text-decoration: none;
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
-    }
-
-    .button-primary:hover {
-        background-color: #0056b3;
-    }
-</style>
-{% endblock %}
