--- a/templates/articles/details.html.twig
+++ b/templates/articles/details.html.twig
@@ -29,6 +29,14 @@
                     <option value="XL">XL</option>
                 </select>
 
+        {% if app.user and (app.user == article.author or is_granted('ROLE_ADMIN')) %}
+        <a href="{{ path('app_article_edit', {id: article.id}) }}">Edit</a>
+        <form action="{{ path('app_article_delete', {id: article.id}) }}" method="post" style="display:inline;">
+        <input type="hidden" name="_method" value="DELETE">
+        <button type="submit" onclick="return confirm('Are you sure you want to delete this article?');">Delete</button>
+        </form>
+        {% endif %}
+
                 <label for="quantity">Quantité :</label>
                 <input type="number" id="quantity" name="quantity" value="1" min="1" max="{{ stockQuantity }}" required>
 
