--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -38,10 +38,9 @@
             </div>
 
             <div class="nav-icons">
-                <a href="javascript:void(0);" class="search" onclick="toggleSearchField()"></a>
-                <form method="get" action="{{ path('app_user_search') }}" class="search-form" id="searchForm" style="display: none;">
+                <form method="get" action="{{ path('app_user_search') }}" class="search-form">
                     <input type="text" name="search" placeholder="Search by username">
-                    <button type="submit">Search</button>
+                    <button type="submit" class="search-icon"></button>
                 </form>
                 <a href="/cart" class="panier"></a>
                 {% if app.user %}
@@ -74,17 +73,6 @@
     <footer>
         <p>&copy; 2025 Mon E-commerce - Tous droits réservés</p>
     </footer>
-
-    <script>
-        function toggleSearchField() {
-            var searchForm = document.getElementById('searchForm');
-            if (searchForm.style.display === 'none') {
-                searchForm.style.display = 'block';
-            } else {
-                searchForm.style.display = 'none';
-            }
-        }
-    </script>
 
 </body>
 </html>
