--- a/templates/articles/sell.html.twig
+++ b/templates/articles/sell.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Vendre un Article - Jeans-Lassape{% endblock %}
-
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/sell.css') }}">
+{% endblock %}
 {% block body %}
 <div class="sell-article-container">
-    <h1>Mettre en Vente un Article</h1>
+    <h1>Mettre en vente un article</h1>
     <form method="POST" action="{{ path('app_add_article') }}" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Nom de l'Article</label>
